# notes-helper

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODING.md  CONTRIBUTING.md  EXAMPLES.md  LANDSCAPE.md  LICENSE  LISEZMOI.md  PAYSAGE.md  PLAN.md  PRODUCT.md  README.md  TECHNICAL_QUESTIONS.md  TECHNICAL_REQUIREMENTS.txt  TECHNICAL_STACK.md  notes_helper_config.json.example  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md
.github/workflows/: ci.yml  core.yml
apps/: README.md  project.yml
apps/Sources/NotesHelper/: AudioRecorder.swift  CLIEngine.swift  ContentView.swift  Engine.swift  Models.swift  NativeEngine.swift  NotesHelperApp.swift  ReportWebView.swift
apps/Sources/NotesHelper/Engine/: AudioDecoder.swift  DSP.swift  Diarizer.swift  IdentityStore.swift  ReportRenderer.swift  SpeakerEmbedder.swift  SpeechRecognizer.swift  Synthesizer.swift  VoiceActivityDetector.swift
assets/: landscape.csv  paysage.csv
contracts/evaluations/: README.md  eval_synthesis.py  requirements.txt
core/: .gitignore  Cargo.toml  README.md
core/nh-core/: Cargo.toml
core/nh-core/src/: blockwise.rs  eot.rs  error.rs  lib.rs  lid.rs  model.rs  models.rs  pipeline.rs  ports.rs  router.rs  session.rs  settings.rs
core/nh-core/tests/: wiring.rs
core/nh-io/: Cargo.toml
core/nh-io/src/: ffmpeg.rs  lib.rs  probe.rs  wav.rs
core/nh-io/tests/: ffmpeg_load.rs  probe_router.rs  wav_load.rs
core/nh-run/: Cargo.toml
core/nh-run/src/: main.rs  report_html.rs
core/nh-sherpa/: Cargo.toml
core/nh-sherpa/src/: lib.rs
core/nh-synth/: Cargo.toml
core/nh-synth/src/: eot.rs  lib.rs  ollama.rs
core/nh-synth/tests/: real_synth.rs
core/nh-whisper/: Cargo.toml
core/nh-whisper/src/: lib.rs
core/nh-whisper/tests/: e2e_offline.rs  real_asr.rs  real_lang.rs
docs/adr/: 0001-adopt-engineering-doctrine.md  0002-diarization-engine.md
legacy/: build_page.py  clean_transcript.py  diar_pipeline.py  map_speakers.py
locales/: i18n.yaml
old/: PLAN.md
scripts/: audit_egress.py  convert_titanet_coreml.py  fetch_models.sh
src/notes_helper/: __init__.py  api.py  asr.py  clean.py  cli.py  config.py  context.py  diarize.py  i18n.py  identity.py  mcp.py  pipeline.py  report.py  slides.py  synth.py  verify.py  webaudio.py
src/notes_helper/assets/: fonts.css
src/notes_helper/locales/: i18n.yaml
src/notes_helper/outputs/: __init__.py  _text.py  _timefmt.py  docs.py  html.py  markdown.py  vault.py
tests/: conftest.py  test_api.py  test_audit.py  test_clean.py  test_context.py  test_diarize_embedder.py  test_i18n.py  test_identity.py  test_markdown.py  test_mcp.py  test_outputs.py  test_outputs_robustness.py  test_outputs_text.py  test_slides.py  test_synth_robustness.py  test_verify.py
tests/eval/: dataset.json  test_synthesis_faithfulness.py
