# Cargo workspace for the Notes Helper native core.
#
# The workspace groups the platform-agnostic engine crate (`nh-core`) and, in later
# milestones, the engine-binding crates (whisper.cpp / sherpa-onnx / llama.cpp) and the
# UniFFI/C-ABI wrapper crates. Keeping them in one workspace gives a single lockfile and
# one `cargo test` across the whole native side.
[workspace]
resolver = "2"
members = ["nh-core", "nh-io", "nh-whisper", "nh-sherpa", "nh-synth"]
# nh-run is a standalone runner (its own workspace) that turns on the heavy engine
# features; keep it out of the core workspace so `cargo test --all` and CI stay light.
exclude = ["nh-run"]

# Shared release profile tuning applies to every crate in the workspace.
[profile.release]
# Thin LTO trims binary size on mobile without the full-LTO build-time blow-up.
lto = "thin"
